fixed bug in post: overflow hidden in username

--- a/src/app/feed/post/post.component.css
+++ b/src/app/feed/post/post.component.css
@@ -56,8 +56,6 @@
   height: 100%;
   color: #F7F7F7;
   letter-spacing: 0.160em;
-  overflow-X: scroll;
-  overflow-y: hidden;
   text-align: left;
 }
 
